airflow/logs/dag_id=Google_map/run_id=manual__2025-03-16T161539.596689+0000/task_id=transform_phase_2_task/attempt=10.log
[2025-03-16T17:38:03.211+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Google_map.transform_phase_2_task manual__2025-03-16T16:15:39.596689+00:00 [queued]>
[2025-03-16T17:38:03.268+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Google_map.transform_phase_2_task manual__2025-03-16T16:15:39.596689+00:00 [queued]>
[2025-03-16T17:38:03.269+0000] {taskinstance.py:2170} INFO - Starting attempt 10 of 11
[2025-03-16T17:38:03.380+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): transform_phase_2_task> on 2025-03-16 16:15:39.596689+00:00
[2025-03-16T17:38:03.397+0000] {standard_task_runner.py:60} INFO - Started process 143776 to run task
[2025-03-16T17:38:03.416+0000] {standard_task_runner.py:87} INFO - Running: ['airflow', 'tasks', 'run', 'Google_map', 'transform_phase_2_task', 'manual__2025-03-16T16:15:39.596689+00:00', '--job-id', '132', '--raw', '--subdir', 'DAGS_FOLDER/google_map_dag_etl.py', '--cfg-path', '/tmp/tmp7o6xlgib']
[2025-03-16T17:38:03.421+0000] {standard_task_runner.py:88} INFO - Job 132: Subtask transform_phase_2_task
[2025-03-16T17:38:03.745+0000] {task_command.py:423} INFO - Running <TaskInstance: Google_map.transform_phase_2_task manual__2025-03-16T16:15:39.596689+00:00 [running]> on host DESKTOP-AVAHALM.
[2025-03-16T17:38:04.092+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='master_m2si' AIRFLOW_CTX_DAG_ID='Google_map' AIRFLOW_CTX_TASK_ID='transform_phase_2_task' AIRFLOW_CTX_EXECUTION_DATE='2025-03-16T16:15:39.596689+00:00' AIRFLOW_CTX_TRY_NUMBER='10' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-03-16T16:15:39.596689+00:00'
[2025-03-16T17:38:04.097+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/nord/venv/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/home/nord/airflow/dags/google_map_dag_etl.py", line 51, in <lambda>
    python_callable=lambda: __import__('transform_phase_2').main()
  File "/home/nord/airflow/dags/transform_phase_2.py", line 74
    print(f"Mismatch in length: {len(topics)} topics vs {len(df_filtered)} rows")
    ^
IndentationError: expected an indented block
[2025-03-16T17:38:04.143+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Google_map, task_id=transform_phase_2_task, execution_date=20250316T161539, start_date=20250316T173803, end_date=20250316T173804
[2025-03-16T17:38:04.187+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 132 for task transform_phase_2_task (expected an indented block (transform_phase_2.py, line 74); 143776)
[2025-03-16T17:38:04.228+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-03-16T17:38:04.355+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
